[gd_scene load_steps=4 format=3 uid="uid://dptiwfj1bgnlf"]

[ext_resource type="Script" path="res://scenes/Fish.gd" id="1_0671q"]
[ext_resource type="Texture2D" uid="uid://c7y5e3kbyixh8" path="res://Toy_Sprites/fish.png" id="2_m27uy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_40yrj"]
size = Vector2(37, 38)

[node name="Fish" type="Node2D"]
script = ExtResource("1_0671q")

[node name="FishSprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(860.5, 192.5)
scale = Vector2(2.5, 2.5)
texture = ExtResource("2_m27uy")

[node name="Collect_Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collect_Area"]
position = Vector2(860.5, 195)
shape = SubResource("RectangleShape2D_40yrj")

[node name="FishTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="Collect_Area" to="." method="_on_collect_area_body_entered"]
[connection signal="timeout" from="FishTimer" to="." method="_on_fish_timer_timeout"]
